<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:id="@+id/coordinator">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_screen_background"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingStart="10pt"
        android:paddingTop="10pt"
        android:paddingEnd="10pt"
        tools:context="com.amanciodrp.yellotaxi.driverActivity.DriverLoginActivity">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:background="@drawable/logo"
            android:layout_marginBottom="20pt"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/google_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10pt"
            android:background="@color/com_facebook_button_login_silver_background_color_pressed"
            android:drawableStart="@drawable/googleg_standard_color_18"
            android:onClick="onClick"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/google_login_msg"
            android:textAlignment="center" />

        <android.support.v7.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/com_facebook_button_background"
            android:drawableStart="@drawable/com_facebook_button_icon"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/facebook_login_msg"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5pt"
            android:gravity="center_horizontal"
            android:text="OU"
            android:textColor="@android:color/black" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/black_overlay">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColorLink="@color/common_google_signin_btn_text_dark_focused" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
                android:drawableEnd="@drawable/ic_visibility_black_24dp"
                android:hint="@string/password"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5pt"
            android:onClick="onClick"
            android:text="@string/connexion" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/no_account_msg"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/creer_mon_compte" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>