<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="customerInfo"
            type="com.amanciodrp.yellotaxi.viewmodel.CustomerInfoViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".driveractivity.DriverMapActivity">

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

        <com.github.clans.fab.FloatingActionMenu
            android:id="@+id/menu_yellow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:elevation="5dp"
            fab:layout_constraintStart_toStartOf="parent"
            fab:layout_constraintTop_toTopOf="parent"
            fab:menu_animationDelayPerItem="0"
            fab:menu_colorNormal="@color/idle_dot"
            fab:menu_colorPressed="@color/idle_dot"
            fab:menu_colorRipple="@color/idle_dot"
            fab:menu_icon="@drawable/ic_menu_white_24dp"
            fab:menu_labels_position="right"
            fab:menu_openDirection="down"
            fab:menu_shadowColor="#444">

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_logout"
                fab:fab_colorNormal="@color/white"
                fab:fab_colorPressed="@color/idle_dot"
                fab:fab_label="Déconnexion"
                fab:fab_size="mini" />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_account_circle_grey_24dp"
                fab:fab_colorNormal="@color/white"
                fab:fab_colorPressed="@color/idle_dot"
                fab:fab_label="Mon compte"
                fab:fab_size="mini" />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_list_list_24dp"
                fab:fab_colorNormal="@color/white"
                fab:fab_colorPressed="@color/idle_dot"
                fab:fab_label="Mes courses"
                fab:fab_size="mini" />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/payement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_payment_grey_24dp"
                fab:fab_colorNormal="@color/white"
                fab:fab_colorPressed="@color/idle_dot"
                fab:fab_label="Moyens de paiement"
                fab:fab_size="mini" />

        </com.github.clans.fab.FloatingActionMenu>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/workingSwitch"
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="8dp"
            android:elevation="5dp"
            android:textOff="@string/driver_status"
            android:textOn="@string/driver_status_on"
            android:thumb="@drawable/driver_switch_on_off"
            fab:layout_constraintEnd_toEndOf="parent"
            fab:layout_constraintTop_toTopOf="parent"
            fab:showText="true"
            fab:track="@drawable/round_switch_off"
             />

        <LinearLayout
            android:id="@+id/customerInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/round_border_switch_background"
            android:elevation="1dp"
            android:orientation="vertical"
            android:translationZ="1dp"
            android:visibility="gone"
            fab:layout_constraintBottom_toBottomOf="parent"
            fab:layout_constraintEnd_toEndOf="parent"
            fab:layout_constraintStart_toStartOf="parent"
            fab:layout_constraintTop_toTopOf="@+id/map">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/customerProfileImage"
                    android:layout_width="100sp"
                    android:layout_height="100sp"
                    android:padding="20sp"
                    android:src="@mipmap/ic_default_user" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="40sp">

                    <TextView
                        android:id="@+id/customerDestination"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10sp"
                        android:text="Destination: --"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/customerName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="20sp"
                        android:paddingBottom="10sp"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/customerPhone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="20sp"
                        android:paddingBottom="10sp"
                        android:textColor="@color/black" />
                </LinearLayout>
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/rideStatus"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="picked customer" />

        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/myLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="32dp"
            android:layout_weight="1"
            android:src="@drawable/ic_my_location_black_24dp"
            fab:backgroundTint="@color/white"
            fab:fabSize="mini"
            fab:layout_constraintBottom_toBottomOf="parent"
            fab:layout_constraintEnd_toEndOf="parent"
            fab:layout_constraintHorizontal_bias="1.0"
            fab:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/white"
            android:text="@string/mon_statut"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold"
            fab:layout_constraintBottom_toTopOf="@+id/workingSwitch"
            fab:layout_constraintEnd_toEndOf="@+id/workingSwitch"
            fab:layout_constraintStart_toStartOf="@+id/workingSwitch"
            fab:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>



